[gd_scene format=3 uid="uid://uy0rfxxmsywa"]

[ext_resource type="Script" uid="uid://cwq6ffrks6lid" path="res://Escenas/interfaz_level_up.gd" id="1_omvni"]

[node name="InterfazLevelUP" type="CanvasLayer" unique_id=233060515]
process_mode = 2
script = ExtResource("1_omvni")

[node name="Panel" type="Panel" parent="." unique_id=573623779]
offset_left = 50.0
offset_top = 34.0
offset_right = 189.0
offset_bottom = 140.0

[node name="ButtonNudillo" type="Button" parent="Panel" unique_id=921462712]
layout_mode = 0
offset_right = 36.0
offset_bottom = 106.0

[node name="ButtonLanza" type="Button" parent="Panel" unique_id=2096985681]
layout_mode = 0
offset_left = 104.0
offset_right = 138.0
offset_bottom = 106.0

[node name="ButtonAura" type="Button" parent="Panel" unique_id=96671502]
layout_mode = 0
offset_left = 52.0
offset_right = 88.0
offset_bottom = 106.0

[connection signal="pressed" from="Panel/ButtonNudillo" to="." method="_on_button_nudillo_pressed"]
[connection signal="pressed" from="Panel/ButtonLanza" to="." method="_on_button_lanza_pressed"]
[connection signal="pressed" from="Panel/ButtonAura" to="." method="_on_button_aura_pressed"]
